ingress/allow-homepage-to-immich.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-homepage-to-immich
  namespace: immich
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homepage
          podSelector:
            matchLabels:
              app: homepage
